--- a/src/components/RateInput/RateInput.css
+++ b/src/components/RateInput/RateInput.css
@@ -1,4 +1,24 @@
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
 .rate-input-wrapper {
   display: flex;
   flex-direction: column;
+  color: var(--main-text-color);
+  align-items: center;
+}
+
+.rate-input {
+  color: var(--main-text-color);
+  height: 3rem;
+  text-align: center;
+  width: 9rem;
+  font-size: 1.25rem;
+  border: 0.0625rem dashed var(--main-text-color);
+  background-color: var(--main-bg-color);
 }
